--- a/src/components/navigationlink/navigationlink.css
+++ b/src/components/navigationlink/navigationlink.css
@@ -27,6 +27,7 @@
 }
 
 .nav-item-icon {
+	display: block;
+	margin: 0 auto;
 	position: relative;
-	left: 5px;
 }
